[package]
name = "leptix"
version = "0.1.0"
edition = "2024"
description = "Simple UI components for Leptos."
license = "MIT"
repository = "https://github.com/nishujangra/leptix"

[dependencies]
leptos = { version = "0.8.15", default-features = false }

[features]
default = []
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
